# ai-software-engineering-academy

./: .gitignore  AGENTS.md  ARCHITECTURE_AUDIT.md  BENCHMARK_REPORT.md  BOOTSTRAP_PROMPT.md  DISCOVERY_REPORT.md  ENTERPRISE_ARCHITECTURE.md  EXECUTION_PLAN.md  GAP_ANALYSIS.md  ORCHESTRATION_LOG.md  STYLE_GUIDE.md  _all_unlabeled.json  _blocks.json  _code_blocks.json  _final_issues.txt  _issues.txt  _issues2.txt  _preview.txt  _re_test.txt  _remaining.txt  _unlabeled.json  _unlabeled_blocks.json  fix_chapters.py  fix_codeblocks.py  fix_pd_chapters.py  opencode.json  opencode.json.bak  opencode.json.new  pyproject.toml  requirements.txt
curriculum/: README.md  status.yaml
knowledge-factory/: README.md
schemas/: book-manifest.schema.json  catalog.schema.json  metadata.schema.json
scripts/: .gitignore  README.md  agents_sync.py  auto_fix_code_languages.py  batch_content.py  batch_diagrams.py  batch_lms.py  batch_newsletter.py  batch_projects.py  batch_remaining.py  batch_slides.py  batch_social.py  batch_videos.py  batch_workshops.py  book_architect.py  book_publisher.py  bqs_compute.py  bqs_score_card_generator.py  build_book_components.py  build_component_pdf.py  build_docx.py  build_epub.py  build_pdf_digital.py  build_pdf_print.py  build_pdf_typst.py  cache.py  catalog_populator.py  cleanup_code_fences.py  config.py  consistency_auditor.py  deploy_kdp.py  diagram_factory.py  i18n_pipeline.py  link_checker.py  md_to_components.py  metadata_populator.py  migrate_paths.py  pipeline_audit.py  pipeline_manager.py  prebuild-site.js  (+3 more)
tests/: test_bqs.py  test_config.py
web/: package-lock.json  package.json
(+1409 files in other folders)
