[project]
name = "ai-software-engineering-academy"
version = "1.0.0"
description = "Knowledge Factory — AI-native technical publishing"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["fix_*.py", "scripts/templates/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []

[tool.ruff.per-file-ignores]
"fix_*.py" = ["E", "F", "W", "I", "N", "UP", "S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
